k8s/istio/testing/fault-injection.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: customer-user-service-fault
  namespace: svp
spec:
  hosts:
    - customer-user-service
  http:
    - match:
        - uri:
            prefix: /customers
      fault:
        delay:
          percentage:
            value: 50
          fixedDelay: 3s
      route:
        - destination:
            host: customer-user-service
            port:
              number: 8001
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: expense-service-fault
  namespace: svp
spec:
  hosts:
    - expense-service
  http:
    - match:
        - uri:
            prefix: /expenses
      fault:
        abort:
          percentage:
            value: 30
          httpStatus: 503
      route:
        - destination:
            host: expense-service
            port:
              number: 8003
